@@ -42,8 +42,8 @@ sample_names_rename:\
 """ if cli_args.splan else ""
     dev_desc = """
 report_comment: >
-This software is currently under active development and the results have been generated with a non stable version. 
-The reliability, reproducibility and the quality of the results are therefore not guaranteed.\
+  This software is currently under active development and the results have been generated with a non stable version. 
+  The reliability, reproducibility and the quality of the results are therefore not guaranteed.\
 """ if re.match(r".*dev$", args.version) else ""
     with open(cli_args.splan, 'r') as fp:
         splan_content = '\n' + "\n".join(
@@ -93,9 +93,9 @@ custom_plot_config:
 title: '{cli_args.name}'
 subtitle: Institut Curie NGS/Bioinformatics core facilities
 intro_text: >
-This report has been generated by the {cli_args.name} analysis pipeline ({cli_args.version})\
+  This report has been generated by the {cli_args.name} analysis pipeline ({cli_args.version})\
 {dev_desc}
-custom_logo: '{os.sep.join([os.path.dirname(os.path.realpath(__file__)), '../assets/institut_curie.png'])}'
+custom_logo: '{os.sep.join([os.path.dirname(os.path.realpath(__file__)), '../assets/institutCurieLogo.png'])}'
 custom_logo_title: Institut Curie
 custom_logo_url: https://science.curie.fr/plateformes/sequencage-adn-haut-debit-ngs/\
 {splan_desc}{splan_content}{nbreads_cont}
